// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage component should render correctly 1`] = `
<div
  className="form-wrapper"
>
  <form
    className="form user-form"
  >
    <div
      className="input-wrapper"
    >
      <label
        className="user-form__label"
        htmlFor="email"
      >
        Username/Email:
      </label>
      <input
        className="form-input"
        id="email"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="input-wrapper"
    >
      <label
        className="user-form__label"
        htmlFor="password"
      >
        Password:
      </label>
      <input
        className="form-input"
        id="password"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
      <button
        className="user-form__btn"
        type="button"
      >
        Sign Up
      </button>
    </div>
  </form>
</div>
`;

exports[`LoginPage component wrong password should show error message 1`] = `
<div
  className="form-wrapper"
>
  <form
    className="form user-form"
  >
    <div
      className="error"
    />
    <div
      className="input-wrapper"
    >
      <label
        className="user-form__label"
        htmlFor="email"
      >
        Username/Email:
      </label>
      <input
        className="form-input"
        id="email"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div
      className="input-wrapper"
    >
      <label
        className="user-form__label"
        htmlFor="password"
      >
        Password:
      </label>
      <input
        className="form-input"
        id="password"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <div
      className="btn-wrapper"
    >
      <button
        className="user-form__btn"
        onClick={[Function]}
        type="submit"
      >
        Login
      </button>
      <button
        className="user-form__btn"
        type="button"
      >
        Sign Up
      </button>
    </div>
  </form>
</div>
`;
